# roy-demos

./: README.md  pyproject.toml  requirements.txt
plotting/: Plotting + Pandas quick walkthrough.ipynb
