[tool.poetry]
name = "ouster-plotting-demo"
version = "0.1.0"
description = ""
authors = ["Roy Rinberg <roy.rinberg@ouster.io>"]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.2.4"
numpy = "^1.20.3"
matplotlib = "^3.4.2"
openpyxl = "^3.0.7"

[tool.poetry.dev-dependencies]
bpython = "^0.21"
black = "^21.5b1"
nbstripout = "^0.4.0"
jupyterlab = "^3.0.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
